discussion/kv_engine/162981/162981_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48680: Add optional key->vb sanity check to mutation and delete

Add an optional (off by default) sanity check mode to check that a
key maps to the provided vBucket. This can be turned on by setting
vbucket_mapping_sanity_checking to true via epctl. An additional
configuration variable was also added to change the error mode of
these sanity checks. Changing
vbucket_mapping_sanity_checking_error_mode to log, throw, or abort
changes the error mode respectively. This allows us to reuse this
(should we ever need to) in customer environments where we may want
to log or throw an exception rather than abort the process (which
is preferrable in a QE environment).

Change-Id: If51c0438a3b17adeb7509c7df17c280666abdf11

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-05 15:46:35.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-05 16:32:43.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34685/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dockey_validator.cc:33:24:
error: use of undeclared identifier "getGlobalBucketLogger"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34685/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40774/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(221): error C2872: "KVStore": ambiguous symbol ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40774/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13162/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3: error: static_assert failed due to requirement "fmt::v7::formattable<Vbid>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1438:10: note: in instantiation of function template specialization "fmt::v7::detail::check<Vbid>" requested here
  return check<T>(arg_mapper<Context>().map(val));
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1587:23: note: in instantiation of function template specialization "fmt::v7::detail::make_arg<true, fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, fmt::v7::detail::type::custom_type, Vbid, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1626:10: note: in instantiation of member function "fmt::v7::format_arg_store<fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, cb::UserData, Vbid, Vbid>::format_arg_store" requested here
  return {args...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2075:28: note: in instantiation of function template specialization "fmt::v7::make_args_checked<cb::UserData, Vbid &, Vbid &, char [55], char>" requested here
  const auto& vargs = fmt::make_args_checked<Args...>(format_str, args...);
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dockey_validator.cc:28:28: note: in instantiation of function template specialization "fmt::v7::format<char [55], cb::UserData, Vbid &, Vbid &, char>" requested here
                      fmt::format("Key {} supplied with vBucket {}. Correct "
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3: error: static_assert failed due to requirement "fmt::v7::formattable<cb::UserData>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1438:10: note: in instantiation of function template specialization "fmt::v7::detail::check<cb::UserData>" requested here
  return check<T>(arg_mapper<Context>().map(val));
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1587:23: note: in instantiation of function template specialization "fmt::v7::detail::make_arg<true, fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, fmt::v7::detail::type::custom_type, cb::UserData, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1626:10: note: in instantiation of member function "fmt::v7::format_arg_store<fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, cb::UserData, Vbid, Vbid>::format_arg_store" requested here
  return {args...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2075:28: note: in instantiation of function template specialization "fmt::v7::make_args_checked<cb::UserData, Vbid &, Vbid &, char [55], char>" requested here
  const auto& vargs = fmt::make_args_checked<Args...>(format_str, args...);
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dockey_validator.cc:28:28: note: in instantiation of function template specialization "fmt::v7::format<char [55], cb::UserData, Vbid &, Vbid &, char>" requested here
                      fmt::format("Key {} supplied with vBucket {}. Correct "
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dockey_validator.cc:33:24: error: use of undeclared identifier "getGlobalBucketLogger" [clang-diagnostic-error]
                      *getGlobalBucketLogger(),
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13162/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3:
error: static_assert failed due to requirement "fmt::v7::formattable<Vbid>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13162/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23048/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15032/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15032/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15619/ : FAILURE

Timeout of a CTest test [2021-10-05T16:17:06.342Z]   4/404 Test #218: ep-engine_ep_unit_tests.NexusFullOrValue/DurabilityWarmupTest ...............................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15619/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2816/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2816/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11949/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14762/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13909/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
